new data structures nb

--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ status = 3
 user = BrunodsLilly
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = fastcore networkx==3.4.2 matplotlib==3.10.0
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
